# pybader

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
examples/: bader.py  compare_methods.py  cube_spin_density.py  gpaw_example.py  vacuum_tol.py
pybader/: __init__.py  dunders.py  entry_points.py  interface.py  jits.py  methods.py  refinement.py  thread_handlers.py  utils.py  voxel_map.py
pybader/io/: __init__.py  chgcar.py  cube.py  gpaw.py  pymatgen.py  vasp.py
python/pybader/: __init__.py  voxel_map.py
src/: io.rs  lib.rs  voxel_map.rs
