[tool.poetry]
name = "pybader"
version = "0.4.0"
description = ""
authors = ["Adam Kerrigan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.0"
numpy = "^1.21.1"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
maturin = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0","maturin>=0.11<0.12"]
build-backend = "maturin"
