[tool.poetry]
name = "pybader"
version = "0.4.0"
description = ""
authors = ["Adam Kerrigan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
maturin = "^1.3.0"

[tool.maturin]
module-name = "pybader._pybader"
python-source = "python"

[build-system]
requires = ["poetry-core>=1.0.0","maturin>=1.0,<2.0"]
build-backend = "maturin"
